Fix Alembic for CI/CD

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,9 +75,11 @@ jobs:
     - name: Wait for services
       run: |
         echo "Waiting for PostgreSQL..."
+        # Install PostgreSQL client for pg_isready
+        sudo apt-get update && sudo apt-get install -y postgresql-client
         timeout 60 bash -c 'until pg_isready -h localhost -p 5432 -U user; do sleep 2; done'
         echo "Waiting for RabbitMQ..."
-        timeout 60 bash -c 'until curl -f http://localhost:15672/api/overview -u guest:guest; do sleep 2; done'
+        timeout 60 bash -c 'until curl -f http://localhost:15672/api/overview -u guest:guest > /dev/null 2>&1; do sleep 2; done'
         echo "Services are ready!"
     
     - name: Run database migrations
