--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,19 +18,17 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     
-    - name: Login to Container Registry
+    - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        registry: ${{ secrets.REGISTRY_URL }}
-        username: ${{ secrets.REGISTRY_USERNAME }}
-        password: ${{ secrets.REGISTRY_PASSWORD }}
-      if: ${{ secrets.REGISTRY_URL }}
+        username: ${{ secrets.REGISTRY_URL }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
     
     - name: Extract metadata
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ secrets.REGISTRY_URL }}/image-processing-api
+        images: doonyanikitin/image-processing-api
         tags: |
           type=ref,event=branch
           type=ref,event=pr
@@ -43,13 +41,12 @@ jobs:
       with:
         context: .
         platforms: linux/amd64,linux/arm64
-        push: ${{ secrets.REGISTRY_URL != '' }}
+        push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
     
-    # Add deployment steps here (e.g., kubectl, docker-compose, etc.)
     - name: Deploy to production
       if: github.ref == 'refs/heads/main'
       run: |
